--- a/index.html
+++ b/index.html
@@ -1,173 +1,133 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ارتباط با هورزاد</title>
-  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
   <style>
-    * {
+    @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
+
+    body, html {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      direction: rtl;
-    }
-
-    body {
       font-family: 'Vazirmatn', sans-serif;
       background-color: #042721;
       color: #c8a257;
+      scroll-behavior: smooth;
       overflow-x: hidden;
     }
 
-    .hero {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    .parallax-container {
       position: relative;
-    }
-
-    .hero-logo {
-      width: 220px;
-      max-width: 80vw;
-      mix-blend-mode: lighten;
-      filter: drop-shadow(0 0 25px #c8a25788);
-      transition: transform 0.5s ease;
-    }
-
-    .content {
       height: 100vh;
+      background-color: #042721;
       display: flex;
-      align-items: center;
       justify-content: center;
-      padding: 2rem;
+      align-items: center;
     }
 
-    .card {
-      background: rgba(255, 255, 255, 0.08);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(12px);
-      border-radius: 20px;
-      padding: 2rem;
-      max-width: 400px;
-      width: 100%;
-      text-align: center;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
-      transform: translateY(50px);
-      opacity: 0;
-      transition: all 1s ease;
+    .logo {
+      width: 180px;
+      position: relative;
+      z-index: 2;
+      filter: drop-shadow(0 0 40px #c8a257aa);
     }
 
-    .card.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .card h1 {
-      margin-bottom: 1rem;
-      color: #c8a257;
-    }
-
-    .card p {
-      margin: 0.5rem 0;
-      font-size: 1.05rem;
-    }
-
-    a {
-      color: #c8a257;
-      text-decoration: none;
-    }
-
-    a:hover {
-      color: #fff4dc;
-    }
-
-    .scroll-icon {
+    .scroll-indicator {
       position: absolute;
       bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
-      animation: bounce 2s infinite;
-      opacity: 0.9;
       cursor: pointer;
+      z-index: 2;
+      animation: bounce 2s infinite;
     }
 
-    .scroll-icon svg {
-      transition: box-shadow 0.3s ease;
-    }
-
-    .scroll-icon:hover svg {
-      box-shadow: 0 0 15px 5px rgba(200, 162, 87, 0.7);
-    }
-
-    .scroll-text {
-      position: absolute;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 1.2rem;
-      color: #c8a257;
-      opacity: 0.7;
+    .scroll-indicator svg {
+      width: 32px;
+      height: 32px;
+      fill: #c8a257;
     }
 
     @keyframes bounce {
-      0%, 100% {
-        transform: translate(-50%, 0);
-      }
-      50% {
-        transform: translate(-50%, 15px);
-      }
+      0%, 100% { transform: translate(-50%, 0); }
+      50% { transform: translate(-50%, 10px); }
+    }
+
+    .halo {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(circle, #c8a25733, transparent 80%);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      border-radius: 50%;
+      filter: blur(30px);
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 20px;
+      padding: 2rem;
+      margin: 3rem auto;
+      max-width: 400px;
+      backdrop-filter: blur(12px);
+      border: 1px solid rgba(255,255,255,0.1);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      animation: fadeIn 1.5s ease-out;
+    }
+
+    .card h1 {
+      margin-bottom: 1.5rem;
+      color: #c8a257;
+    }
+
+    .card p {
+      margin: 0.8rem 0;
+      direction: rtl;
+      font-size: 1rem;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(30px);}
+      to {opacity: 1; transform: translateY(0);}
     }
   </style>
 </head>
 <body>
 
-  <section class="hero">
-    <img src="logo.png" alt="لوگو" class="hero-logo" id="heroLogo" />
-    <div class="scroll-icon" onclick="scrollToContent()" aria-label="اسکرول برای دیدن اطلاعات">
-      <svg width="32" height="32" viewBox="0 0 24 24" fill="#c8a257" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 16L6 10H18L12 16Z" />
+  <!-- پارالاکس -->
+  <div class="parallax-container">
+    <img src="logo.png" alt="لوگو هورزاد" class="logo">
+    <div class="halo"></div>
+    <div class="scroll-indicator" onclick="document.getElementById('infoCard').scrollIntoView({behavior: 'smooth'})">
+      <svg viewBox="0 0 24 24">
+        <path d="M12 16.5l-6-6h12l-6 6z"/>
       </svg>
     </div>
-    <div class="scroll-text">
-      اسکرول کنید
-    </div>
-  </section>
+  </div>
 
-  <section class="content">
-    <div class="card" id="infoCard">
-      <h1>ارتباط با هورزاد</h1>
-      <p id="phone">📞 شماره تماس: در حال بارگذاری...</p>
-      <p id="instagram">📷 اینستاگرام: در حال بارگذاری...</p>
-      <p id="whatsapp">💬 واتساپ: در حال بارگذاری...</p>
-    </div>
-  </section>
+  <!-- اطلاعات تماس -->
+  <div class="card" id="infoCard">
+    <h1>ارتباط با هورزاد</h1>
+    <p id="phone">📞 شماره تماس: در حال بارگذاری...</p>
+    <p id="instagram">📷 اینستاگرام: در حال بارگذاری...</p>
+    <p id="whatsapp">💬 واتساپ: در حال بارگذاری...</p>
+    <p id="address">📍 آدرس: در حال بارگذاری...</p>
+  </div>
 
   <script>
-    // Load contact data
-    fetch('data.json')
+    fetch("data.json")
       .then(res => res.json())
       .then(data => {
-        document.getElementById('phone').innerHTML = `📞 شماره تماس: <a href="tel:${data.phone}">${data.phone}</a>`;
-        document.getElementById('instagram').innerHTML = `📷 اینستاگرام: <a href="${data.instagram}" target="_blank">${data.instagram}</a>`;
-        document.getElementById('whatsapp').innerHTML = `💬 واتساپ: <a href="${data.whatsapp}" target="_blank">${data.whatsapp}</a>`;
+        document.getElementById('phone').innerHTML = `📞 شماره تماس: ${data.phone}`;
+        document.getElementById('instagram').innerHTML = `📷 <a href="${data.instagram}" style="color:#c8a257" target="_blank">صفحه اینستاگرام</a>`;
+        document.getElementById('whatsapp').innerHTML = `💬 <a href="${data.whatsapp}" style="color:#c8a257" target="_blank">گفتگو در واتساپ</a>`;
+        document.getElementById('address').innerHTML = `📍 آدرس: ${data.address}`;
       });
-
-    // Reveal card on scroll
-    window.addEventListener('scroll', () => {
-      const card = document.getElementById('infoCard');
-      const position = card.getBoundingClientRect().top;
-
-      if (position < window.innerHeight - 100) {
-        card.classList.add('visible');
-      }
-    });
-
-    // Scroll to content function
-    function scrollToContent() {
-      document.querySelector('.content').scrollIntoView({ behavior: 'smooth' });
-    }
   </script>
 
 </body>
