--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
   <section class="parallax">
     <div class="halo"></div>
-    <img src="assets/logo.png" alt="لوگو هورزاد" class="logo" />
+    <img src="logo.png" alt="لوگو هورزاد" class="logo" />
     <svg onclick="scrollToInfo()" class="scroll-icon" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48" fill="#c8a257">
       <path d="M480 768 240 528l56-56 184 184 184-184 56 56-240 240Z"/>
     </svg>
