--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       min-height: 100vh;
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      padding-top: 250px; /* این بخش اضافه شد */
+      align-items: center;
+      padding-top: 300px; 
     }
 
     #info-box {
