--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
     }
 
     #info-section {
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding-top: 250px; 
     }
 
     #info-box {
@@ -66,7 +65,8 @@
       border-radius: 10px;
       color: #c8a257;
       max-width: 600px;
-      margin: 0 auto;
+      width: 90%;
+      text-align: center;
       box-shadow: 0 0 20px rgba(0,0,0,0.2);
     }
 
