--- a/index.html
+++ b/index.html
@@ -26,13 +26,31 @@
       width: 180px;
       margin-bottom: 2rem;
       mix-blend-mode: screen;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .logo:hover {
+      animation: glowPulse 1.5s infinite alternate ease-in-out;
+      filter: drop-shadow(0 0 10px #c8a257);
+    }
+
+    @keyframes glowPulse {
+      0% {
+        transform: scale(1);
+        filter: drop-shadow(0 0 5px #c8a257);
+      }
+      100% {
+        transform: scale(1.05);
+        filter: drop-shadow(0 0 20px #c8a257);
+      }
     }
 
     .scroll-icon {
       cursor: pointer;
-      width: 40px;
+      width: 36px;
       animation: bounce 2s infinite;
       z-index: 10;
+      margin-top: 10px;
     }
 
     @keyframes bounce {
@@ -69,6 +87,12 @@
       width: 90%;
       text-align: center;
       box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    #info-box:hover {
+      transform: rotateX(3deg) rotateY(-3deg) scale(1.01);
+      box-shadow: 0 10px 25px rgba(200,162,87,0.2);
     }
 
     #info-box a {
@@ -82,9 +106,11 @@
 <body>
   <section class="parallax">
     <div class="halo"></div>
-    <img src="logo.png" alt="لوگو هورزاد" class="logo" />
-    <svg onclick="scrollToInfo()" class="scroll-icon" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48" fill="#c8a257">
-      <path d="M480 768 240 528l56-56 184 184 184-184 56 56-240 240Z"/>
+    <img src="assets/logo.png" alt="لوگو هورزاد" class="logo" />
+    
+    <!-- آیکون اسکرول SVG با کلیک -->
+    <svg onclick="scrollToInfo(); playClick();" class="scroll-icon" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#c8a257" viewBox="0 0 24 24">
+      <path d="M12 16.5l-6-6h12l-6 6z"/>
     </svg>
   </section>
 
@@ -98,15 +124,24 @@
     </div>
   </section>
 
+  <audio id="clickSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_643be61e15.mp3" preload="auto"></audio>
+
   <script>
     function scrollToInfo() {
       const infoSection = document.getElementById('info-section');
-      const offset = infoSection.offsetTop;
-      const sectionHeight = infoSection.clientHeight;
+      const box = document.getElementById('info-box');
+      const boxTop = box.offsetTop;
+      const boxHeight = box.offsetHeight;
       const windowHeight = window.innerHeight;
-      const scrollPosition = offset + (sectionHeight / 2) - (windowHeight / 2);
+      const scrollPos = boxTop - (windowHeight / 2) + (boxHeight / 2);
 
-      window.scrollTo({ top: scrollPosition, behavior: 'smooth' });
+      window.scrollTo({ top: scrollPos, behavior: 'smooth' });
+    }
+
+    function playClick() {
+      const audio = document.getElementById('clickSound');
+      audio.currentTime = 0;
+      audio.play();
     }
   </script>
 </body>
