--- a/index.html
+++ b/index.html
@@ -1,148 +1,224 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ارتباط با هورزاد</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Vazirmatn', sans-serif;
-      background-color: #042721;
-      color: #c8a257;
-      overflow-x: hidden;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>هورزاد – طراحی وب</title>
+    <style>
+        /* کلی استایل‌های پایه */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: Arial, sans-serif;
+            overflow: hidden;
+        }
 
-    .parallax {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
+        .container {
+            position: relative;
+            height: 100vh;
+            background-color: #042721;
+            overflow: hidden;
+        }
 
-    .logo {
-      width: 180px;
-      margin-bottom: 2rem;
-      mix-blend-mode: screen;
-      transition: all 0.3s ease-in-out;
-    }
+        .logo {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 200px;
+            transition: all 0.3s ease;
+        }
 
-    .logo:hover {
-      animation: glowPulse 1.5s infinite alternate ease-in-out;
-      filter: drop-shadow(0 0 10px #c8a257);
-    }
+        /* افکت گلیچ */
+        .logo.glitch {
+            animation: glitch 1s infinite;
+        }
 
-    @keyframes glowPulse {
-      0% {
-        transform: scale(1);
-        filter: drop-shadow(0 0 5px #c8a257);
-      }
-      100% {
-        transform: scale(1.05);
-        filter: drop-shadow(0 0 20px #c8a257);
-      }
-    }
+        @keyframes glitch {
+            0% { transform: translate(-50%, -50%) skew(-10deg); }
+            25% { transform: translate(-50%, -50%) skew(10deg); }
+            50% { transform: translate(-50%, -50%) skew(-10deg); }
+            75% { transform: translate(-50%, -50%) skew(10deg); }
+            100% { transform: translate(-50%, -50%) skew(0); }
+        }
 
-    .scroll-icon {
-      cursor: pointer;
-      width: 36px;
-      animation: bounce 2s infinite;
-      z-index: 10;
-      margin-top: 10px;
-    }
+        /* افکت پارتیکل */
+        #particles-js {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
 
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(10px); }
-    }
+        /* باکس شیشه ای */
+        .box {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
+            max-width: 500px;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            color: #c8a257;
+            text-align: center;
+            font-size: 20px;
+            opacity: 0;
+            transition: all 0.5s ease;
+        }
 
-    .halo {
-      position: absolute;
-      width: 300px;
-      height: 300px;
-      background: radial-gradient(circle, rgba(200,162,87,0.2) 0%, transparent 70%);
-      border-radius: 50%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 0;
-    }
+        /* زمانی که باکس قابل مشاهده است */
+        .box.show {
+            top: 50%;
+            opacity: 1;
+        }
 
-    #info-section {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+        /* دکمه اسکرول */
+        .scroll-btn {
+            position: absolute;
+            bottom: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 30px;
+            color: #c8a257;
+            cursor: pointer;
+            transition: 0.3s;
+        }
 
-    #info-box {
-      padding: 2rem;
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border-radius: 10px;
-      color: #c8a257;
-      max-width: 600px;
-      width: 90%;
-      text-align: center;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+        .scroll-btn:hover {
+            color: #f1f1f1;
+        }
 
-    #info-box:hover {
-      transform: rotateX(3deg) rotateY(-3deg) scale(1.01);
-      box-shadow: 0 10px 25px rgba(200,162,87,0.2);
-    }
-
-    #info-box a {
-      color: #c8a257;
-      text-decoration: none;
-      display: block;
-      margin: 0.5rem 0;
-    }
-  </style>
+    </style>
 </head>
 <body>
-  <section class="parallax">
-    <div class="halo"></div>
-    <img src="logo.png" alt="لوگو هورزاد" class="logo" />
+
+<!-- موسیقی زمینه -->
+<audio id="background-music" autoplay loop>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+    مرورگر شما از این فرمت پشتیبانی نمی‌کند.
+</audio>
+
+<!-- پارتیکل -->
+<div id="particles-js"></div>
+
+<!-- لوگو -->
+<div class="logo" id="logo">
+    <img src="logo.png" alt="هورزاد">
+</div>
+
+<!-- باکس شیشه‌ای -->
+<div class="box" id="info-box">
+    <p>اطلاعات و مشخصات برند هورزاد</p>
+    <p>خیابان بوعلی، سیزده خانه، کوچه میخک، ساختمان نگار، طبقه سوم</p>
+    <p><a href="tel:09390789562">تماس: 09390789562</a></p>
+    <p><a href="https://instagram.com/hoorzadstudio">اینستاگرام</a></p>
+    <p><a href="https://wa.me/989390789562">واتساپ</a></p>
+</div>
+
+<!-- دکمه اسکرول -->
+<div class="scroll-btn" id="scroll-btn">&#8595;</div>
+
+<!-- اضافه کردن پارتیکل -->
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script>
+    particlesJS("particles-js", {
+        "particles": {
+            "number": {
+                "value": 50,
+                "density": {
+                    "enable": true,
+                    "value_area": 800
+                }
+            },
+            "color": {
+                "value": "#c8a257"
+            },
+            "shape": {
+                "type": "circle",
+                "stroke": {
+                    "width": 0,
+                    "color": "#c8a257"
+                }
+            },
+            "size": {
+                "value": 3,
+                "random": true,
+                "anim": {
+                    "enable": true,
+                    "speed": 2,
+                    "size_min": 0.3,
+                    "sync": false
+                }
+            },
+            "move": {
+                "enable": true,
+                "speed": 1,
+                "direction": "random",
+                "random": true,
+                "straight": false,
+                "out_mode": "out",
+                "bounce": false,
+                "attract": {
+                    "enable": true,
+                    "rotateX": 600,
+                    "rotateY": 1200
+                }
+            }
+        },
+        "interactivity": {
+            "detect_on": "window",
+            "events": {
+                "onhover": {
+                    "enable": true,
+                    "mode": "repulse"
+                },
+                "onclick": {
+                    "enable": true,
+                    "mode": "push"
+                }
+            }
+        },
+        "retina_detect": true
+    });
+</script>
+
+<!-- اسکرول افکت -->
+<script>
+    const scrollBtn = document.getElementById('scroll-btn');
+    const infoBox = document.getElementById('info-box');
+    const logo = document.getElementById('logo');
     
-    <!-- آیکون اسکرول SVG با کلیک -->
-    <svg onclick="scrollToInfo(); playClick();" class="scroll-icon" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#c8a257" viewBox="0 0 24 24">
-      <path d="M12 16.5l-6-6h12l-6 6z"/>
-    </svg>
-  </section>
+    // وقتی دکمه اسکرول زده میشه
+    scrollBtn.addEventListener('click', () => {
+        window.scrollTo({
+            top: window.innerHeight,
+            behavior: 'smooth'
+        });
+    });
 
-  <section id="info-section">
-    <div id="info-box">
-      <h2>ارتباط با هورزاد</h2>
-      <a href="tel:09390789562">📞 09390789562</a>
-      <a href="https://instagram.com/hoorzadstudio" target="_blank">📷 hoorzadstudio</a>
-      <a href="https://wa.me/989390789562" target="_blank">💬 واتساپ</a>
-      <p>📍 خیابان بوعلی (سیزده‌خانه)، کوچه میخک، ساختمان نگار، طبقه سوم</p>
-    </div>
-  </section>
+    // زمانی که اسکرول می‌کنیم
+    window.addEventListener('scroll', () => {
+        if (window.scrollY > window.innerHeight / 2) {
+            infoBox.classList.add('show');
+        } else {
+            infoBox.classList.remove('show');
+        }
+    });
 
-  <audio id="clickSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_643be61e15.mp3" preload="auto"></audio>
+    // هاور روی لوگو برای افکت گلیچ
+    logo.addEventListener('mouseover', () => {
+        logo.classList.add('glitch');
+    });
 
-  <script>
-    function scrollToInfo() {
-      const infoSection = document.getElementById('info-section');
-      const box = document.getElementById('info-box');
-      const boxTop = box.offsetTop;
-      const boxHeight = box.offsetHeight;
-      const windowHeight = window.innerHeight;
-      const scrollPos = boxTop - (windowHeight / 2) + (boxHeight / 2);
+    logo.addEventListener('mouseout', () => {
+        logo.classList.remove('glitch');
+    });
+</script>
 
-      window.scrollTo({ top: scrollPos, behavior: 'smooth' });
-    }
-
-    function playClick() {
-      const audio = document.getElementById('clickSound');
-      audio.currentTime = 0;
-      audio.play();
-    }
-  </script>
 </body>
 </html>
