--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             text-align: center;
             font-size: 20px;
             opacity: 0;
+            box-shadow: 0 0 10px rgba(200, 162, 87, 0.5); /* افکت گلو ملایم */
             transition: all 0.5s ease;
         }
 
@@ -75,6 +76,11 @@
         .box.show {
             top: 50%;
             opacity: 1;
+        }
+
+        /* زمانی که باکس هاور میشه، گلو شدت می‌گیره */
+        .box:hover {
+            box-shadow: 0 0 20px rgba(200, 162, 87, 0.8); /* افکت گلو شدیدتر */
         }
 
         /* دکمه اسکرول */
