--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             height: 100%;
             font-family: Arial, sans-serif;
             overflow: hidden;
+            background-color: #042721; /* رنگ پس‌زمینه سبز تیره */
         }
 
         .container {
