--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div id="particles-js"></div>
   <section class="parallax">
     <div class="halo"></div>
-    <img src="assets/logo.png" alt="لوگو هورزاد" class="logo" />
+    <img src="logo.png" alt="لوگو هورزاد" class="logo" />
     
     <!-- آیکون اسکرول SVG با کلیک -->
     <svg onclick="handleScrollClick()" class="scroll-icon" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#c8a257" viewBox="0 0 24 24">
