--- a/index.html
+++ b/index.html
@@ -214,9 +214,7 @@
     }
 
     function handleScrollClick() {
-      const section = document.getElementById('info-section');
-      const offset = section.offsetTop;
-      window.scrollTo({ top: offset, behavior: 'smooth' });
+      window.scrollTo({ top: document.documentElement.scrollHeight, behavior: 'smooth' });
     }
 
     function initParticles(id) {
